Fixed hero styling on mobile

--- a/src/app/views/home/section-styles/_hero.scss
+++ b/src/app/views/home/section-styles/_hero.scss
@@ -27,6 +27,10 @@
     top: 30%;
     left: 0%;
     color: $text-white;
+    @media #{$mobile}{
+        text-align: center;
+        line-height: $extraLargeHeading;
+    }
 }
 
 .csc-hero-content div {
